# zed-phpcs-lsp

./: .gitattributes  .gitignore  AUTHORS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  build.sh  extension.toml  extension.wasm  phpcs.xml  test.php
.github/workflows/: build.yml  ci.yml  dependabot-auto-merge.yml  manage-discussions.yml  release.yml  update-phpcs.yml  update-version.yml
lsp-server/: Cargo.toml  build.sh
lsp-server/src/: main.rs  tools.rs
src/: lib.rs
tests/: test.php
