[package]
name = "phpcs-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Mike Bronner <mike.bronner@icloud.com>"]
description = "PHP CodeSniffer Language Server extension for Zed"
license = "MIT"
repository = "https://github.com/mikebronner/zed-phpcs-lsp"

[lib]
crate-type = ["cdylib"]

[target.wasm32-wasip1]

[dependencies]
zed_extension_api = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
